--- a/README.adoc
+++ b/README.adoc
@@ -9,5 +9,5 @@ Octavi Fornés <ofornes@albirar.cat>
 
 This is a little developer group interesting in new technology and OpenSource ethics.
 
-Anyone who like to cooperate in Albirar, please send a message to webmaster@albirar.cat
+Anyone who like to cooperate with Albirar, please send a message to webmaster@albirar.cat
 
